--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,7 @@
             </div>
 
             <div class="project-card">
-                <h3>Calorie Tracking Application API</h3>
+                <h3>Calorie Tracking Application</h3>
                 <p>Designed and implemented backend API for a comprehensive health and fitness tracking application.</p>
                 <ul>
                     <li>Built API for user authentication, calorie tracking, and personalized diet/workout plans</li>
@@ -115,7 +115,7 @@
             </div>
 
             <div class="project-card">
-                <h3>Flashcard Generator with ChatGPT-4</h3>
+                <h3>Flashcard Generator-4</h3>
                 <p>Enhanced the Anki flashcard platform by automating flashcard generation from lecture materials.</p>
                 <ul>
                     <li>Implemented API integration for generating flashcards using OpenAI's ChatGPT-4</li>
