--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="contact-info">
                         <p><i class="fas fa-map-marker-alt"></i> Raleigh, NC</p>
                         <p><i class="fas fa-envelope"></i> <a
-                                href="mailto:kimiafazeli90@gmail.com">kimiafazeli90@gmail.com</a></p>
+                                href="mailto:kimiafazeli90@gmail.com">kfazeli@ncsu.edu</a></p>
                         <p><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/kimia-fazeli-7882b1225/"
                                 target="_blank">LinkedIn Profile</a></p>
                     </div>
