--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
 
                 <div class="about-image">
-                    <img src="kimia.JPG" alt="Kimia Fazeli">
+                    <img src="kimia.jpg" alt="Kimia Fazeli">
                 </div>
             </div>
         </div>
