--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div class="container">
             <ul>
                 <li><a href="index.html" class="active">About</a></li>
-                <li><a href="resume.html">Resume</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="publications.html">Publications</a></li>
+                <li><a href="teaching.html">Resume</a></li>
             </ul>
         </div>
     </nav>
