--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="index.html" class="active">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="publications.html">Publications</a></li>
-                <li><a href="teaching.html">Resume</a></li>
+                <li><a href="teaching.html">Teaching</a></li>
             </ul>
         </div>
     </nav>
