--- a/projects.html
+++ b/projects.html
@@ -66,10 +66,10 @@
     <nav>
         <div class="container">
             <ul>
-                <li><a href="index.html">About</a></li>
-                <li><a href="resume.html">Resume</a></li>
-                <li><a href="projects.html" class="active">Projects</a></li>
+                <li><a href="index.html" class="active">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="publications.html">Publications</a></li>
+                <li><a href="teaching.html">Teaching</a></li>
             </ul>
         </div>
     </nav>
