--- a/teaching.html
+++ b/teaching.html
@@ -67,17 +67,9 @@
                 </div>
 
                 <div class="course">
-                    <h3>Computer Organization and Assembly Language</h3>
-                    <p class="course-info">Course Info: CSC226 - Section 002</p>
-                    <p class="course-info">Instructor: Tiffany Barnes</p>
-                    <p class="course-info">Class Size: 118 students</p>
-                    <p class="course-info">North Carolina State University</p>
-                </div>
-
-                <div class="course">
                     <h3>Data Structures and Algorithms</h3>
-                    <p class="course-info">Course Info: CSC236 - Section 001</p>
-                    <p class="course-info">Instructor: Dana Lasher</p>
+                    <p class="course-info">Course Info: CSC316</p>
+                    <p class="course-info">Instructor: Jason King</p>
                     <p class="course-info">Class Size: 200 students</p>
                     <p class="course-info">North Carolina State University</p>
                 </div>
