--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <a href="mailto:kimiafazeli90@gmail.com"><i class="fas fa-envelope"></i></a>
                 <a href="https://www.linkedin.com/in/kimia-fazeli-7882b1225/" target="_blank"><i
                         class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/YourGitHubUsername" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/kimiafazeli1" target="_blank"><i class="fab fa-github"></i></a>
             </div>
         </div>
     </footer>
