--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
 
                     <div class="contact-info">
                         <p><i class="fas fa-map-marker-alt"></i> Raleigh, NC</p>
-                        <p><i class="fas fa-envelope"></i> <a
-                                href="mailto:kimiafazeli90@gmail.com">kfazeli@ncsu.edu</a></p>
-                        <p><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/kimia-fazeli-7882b1225/"
-                                target="_blank">LinkedIn Profile</a></p>
+                        <p><i class="fas fa-envelope"></i> <a href="mailto:kfazeli@ncsu.edu">kfazeli@ncsu.edu</a></p>
+                        <p><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/kimia-fazeli-7882b1225/" target="_blank">LinkedIn Profile</a></p>
+                        <p><i class="fab fa-github"></i> <a href="https://github.com/kimiafazeli1" target="_blank">GitHub Profile</a></p>
                     </div>
                 </div>
 
@@ -96,6 +95,8 @@
             </div>
         </div>
     </section>
+
+    
 
     <footer>
         <div class="container">
