--- a/publications.html
+++ b/publications.html
@@ -107,9 +107,9 @@
     <nav>
         <div class="container">
             <ul>
-                <li><a href="index.html" class="active">About</a></li>
+                <li><a href="index.html>About</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="publications.html">Publications</a></li>
+                <li><a href="publications.html" class= "active">Publications</a></li>
                 <li><a href="teaching.html">Teaching</a></li>
             </ul>
         </div>
