--- a/teaching.html
+++ b/teaching.html
@@ -45,7 +45,7 @@
     <nav>
         <div class="container">
             <ul>
-                <li><a href="index.html>About</a></li>
+                <li><a href="index.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="publications.html">Publications</a></li>
                 <li><a href="teaching.html" class="active">Teaching</a></li>
