--- a/publications.html
+++ b/publications.html
@@ -107,7 +107,7 @@
     <nav>
         <div class="container">
             <ul>
-                <li><a href="index.html>About</a></li>
+                <li><a href="index.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="publications.html" class= "active">Publications</a></li>
                 <li><a href="teaching.html">Teaching</a></li>
